# deep-researcher

./: .env.example  AGENTS.md  Dockerfile  LICENSE  QWEN.md  README.md  RESEARCH_ARCHITECTURE.md  docker-compose.yml  pyproject.toml  spec.md  start_all.bat  start_all.ps1
.github/: copilot-instructions.md
.github/instructions/: frontend-styling.instructions.md
.github/workflows/: ci.yml
.opencode/skills/: SKILL.md
.opencode/skills/karpathy-guidelines/: SKILL.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: README.md  error.tsx  (+4 more)
schemas/: analysis_stream_event.schema.json  operation_event.schema.json  operation_record.schema.json  research_plan.schema.json  technology_mention.schema.json  technology_report.schema.json  technology_research.schema.json
src/vigilador_tecnologico/: README.md  __init__.py
src/vigilador_tecnologico.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_backend_sequential_validation.py  test_document_analyze.py  test_document_analyze_stream.py  test_document_upload.py  test_extraction_fallback.py  test_gemma_smoke.py  test_ingestion_persistence.py  test_live_e2e.py  test_mistral_adapter.py  test_normalization_reporting.py  test_operational_endpoints.py  test_planning.py  test_prompt_engineering.py  test_research_fallback.py  test_research_worker.py  test_robotics.py  test_robotics_img.py  test_robotics_ocr.py  test_schema_contract_alignment.py  test_sse_stream.py  test_text_utils.py
(+125 files in other folders)
