[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigilador-tecnologico"
version = "0.1.0"
description = "Sistema empresarial de vigilancia tecnologica basado en agentes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
